--- a/public/css/style.css
+++ b/public/css/style.css
@@ -72,7 +72,7 @@ body {
 	.top-buffer {
 		margin-top: 4%;
 	}
-	.portfolio, .contact, .cv, .dom, .project-2, .kitchens, .project-5, .random, .kitchen-1, .kitchen-2, .kitchen-3, .kitchen-4, .chair, .random {
+	.portfolio, .contact, .cv, .dom, .project-2, .kitchens, .project-5, .random, .kitchen-1, .kitchen-2, .kitchen-3, .kitchen-4, .chair, .park, .random {
 		display: none;
 		padding-top: 5%;
 	}
@@ -83,31 +83,31 @@ body {
 		margin: inherit;
 		margin-bottom: 2%
 	}
-	.kitchens > div, .dom > div, .chair > div, .random > div {
+	.kitchens > div, .dom > div, .park > div, .chair > div, .random > div {
 		margin: 0 13%;
 		margin-bottom: 2%
 	}
 	.cv > div {
 		margin: inherit;
 	}
-	.dom-title, .chair-title {
+	.dom-title, .chair-title, .park-title {
 		width: 23%;
 		float: right;
 		text-align: right;
 	}
-	#dom, #chair, #random {
+	#dom, #park, #chair, #random, #cv {
 		background-color: white;
 	}
-	.kitchens, .dom, .chair, .random {
+	.kitchens, .dom, .park, .chair, .random {
 		position: absolute;
 	    width: 85%;
 	    margin: 0 10%;
 	}
-	.kitchens-summary, .dom-summary. .chair-summary, .random-summary {
+	.kitchens-summary, .dom-summary, .park-summary, .chair-summary, .random-summary {
 		float: left;
 		width: 25%;
 	}
-	.kitchens-container, .dom-container, .chair-container, .random-container {
+	.kitchens-container, .dom-container, .park-container, .chair-container, .random-container {
 		float: right;
 		width: 75%;
 	}
@@ -175,23 +175,18 @@ body {
 		font-size: 14px;
 		font-weight: 700;
 	}
-	#dom img {
-		width: 100%;
-		margin-bottom: 5%;
-  		margin-top: 5%;
-	}
 	.kuchnie-title {
 		width: 8%;
 		float: right;
 	}
-	.kuchnie-title span, .dom-title span, .chair-title span, .random-title span {
+	.kuchnie-title span, .dom-title span, .park-title span, .chair-title span, .random-title span {
 		font-size: 14px;
 		font-weight: 700;
 	}
 	#kitchen-1, #kitchen-2, #kitchen-3, #kitchen-4 {
 		background-color: white;
 	}
-	#kitchen-1 img, #kitchen-2 img, #kitchen-3 img, #kitchen-4 img, #chair img, #random img {
+	#dom img, #park img, #kitchen-1 img, #kitchen-2 img, #kitchen-3 img, #kitchen-4 img, #chair img, #random img {
 		width: 100%;
 		margin-bottom: 5%;
   		margin-top: 5%;
@@ -200,7 +195,7 @@ body {
 		width: 50% !important;
 		margin: 0 27% !important;
 	}
-	#kitchen-1-title, #kitchen-2-title, #kitchen-3-title, #kitchen-4-title, #random-title {
+	#kitchen-1-title, #kitchen-2-title, #kitchen-3-title, #kitchen-4-title, #random-title, #park-title {
 		width: 21%;
 	}
 	.cv-title {
@@ -253,3 +248,102 @@ body {
 		color: #003459;
 		cursor: pointer;
 	}
+
+	.hi span#about-lnk:hover {
+		color: #FF9F1C;
+	}
+
+
+	/*** CSS CV ****/
+
+	.cv-header, .page-header { 
+      font-family: 'Raleway', sans-serif;
+    }
+
+    .program-list { 
+      font-family: Segoe UI;
+    }
+
+    .page-header { 
+      font-family: Segoe UI;
+      font-size: 1.3em;
+      font-weight:500;
+      margin-top: -1%;
+    }
+
+    .page-header-2 {
+      margin-top: -4%;
+    }
+        .shift-right {
+          text-align: right;
+          padding-top: 2%;
+          padding-right: 15%;
+          
+        }
+        ul {
+          list-style-type: none;
+        }
+        .r {
+          float:right;
+          font-family: Century Gothic;
+        }
+        #name {
+          font-size: 2.5em;
+        }
+        .cv-container {
+          padding: 0 5%;
+        }
+        .my_photo {
+          height: 150px;
+          width: 150px;
+          margin-top: 3%;
+        }
+        .portfolio-link {
+          margin-top: 5%;
+        }
+        .company-name {
+          font-size: 1.2em;
+        }
+        .company-position {
+          font-size: 1.1em;
+        }
+        .next-item {
+          margin-top: 3%;
+        }
+
+        .jumbotron {
+          padding-top: 0;
+          padding-bottom: 0;
+          background-color: white;
+        }
+        .container {
+          display: table;
+          vertical-align: middle;
+        }
+        .center-icon-container {
+          text-align: center;
+        }
+        .big-icon {
+          font-size: 2em;
+          text-align: center;
+        }
+        .program-list {
+          margin-top: 2%;
+          margin-left: 20%;
+        }
+        .other-stuff {
+          margin-left: 5%;
+          margin-bottom: 2%;
+          font-family: Century Gothic;
+        }
+        .date {
+          font-family: Century Gothic;
+          font-size: 1.1em;
+        }
+        .project-details {
+          margin-top: -1%;
+        }
+        .klauzula {
+          font-size: 0.7em;
+          font-family: Segoe UI !important;
+        }
