--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ body {
 		position: fixed;
 		overflow-y: auto;
 		overflow-x: auto;
-		background: url(/images/background2.png);
+		background: url(http://agatapatel.com/images/background2.png);
 		background-repeat: no-repeat;
 	    background-attachment: fixed;
 	    background-position: center;
