--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,6 +165,9 @@ body {
 	}
 	.about-text {
 		font-family: Raleway;
+		background-color: rgba(255, 255, 255, 0.6);
+    	padding: 5%;
+    	border-radius: 10%;
 	}
 	.back-btn-container {
 		width: 20%;
