--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,364 +1,361 @@
 body {
-		max-width: 100%;
-		font-family: Segoe UI;
-		overflow-x: hidden;
-	}
-	button {
-		outline: 0;
-	}
-
-	sup {
-	    vertical-align: super;
-	    font-size: smaller;
-	    font-family: 'Raleway', sans-serif;
-	    font-size: 14px;
-  		font-weight: 700;
-	}
-
-	.site-container {
-		margin: 0;
-		padding: 0;
-		width: 100%;
-		height: 100%;
-	}
-
-	.hi-page {
-		width: 100%;
-		height: 92%;
-		position: fixed;
-		overflow-y: auto;
-		overflow-x: auto;
-		background: url(http://agatapatel.com/images/background2.png);
-		background-repeat: no-repeat;
-	    background-attachment: fixed;
-	    background-position: center;
-	    -webkit-background-size: cover;
-		  -moz-background-size: cover;
-		  -o-background-size: cover;
-		  background-size: cover;
-	}
-	.navbar {
-		position:absolute; 
-		bottom:0;
-		background-color: black;
-		width: 100%;
-		margin: 0;
-	}
-	.navbar .nav,
-	.navbar .nav > li {
-	  float:none;
-	  display:inline-block;
-	  vertical-align: top;
-	  height: 10%;
-	}
-	.navbar-collapse {
-		text-align: center;
-	}
-	#main {
-		display: inline;
-	}
-	.home {
-		width: 100%;
-		text-align: center;
-		padding-top: 5%;
-		position: relative;
-		display: table;
-	}
-	#display-photo {
-		height: 300px;
-		width: 300px;
-		margin-top: 3%;
-	}
-	.top-buffer {
-		margin-top: 4%;
-	}
-	.portfolio, .contact, .cv, .dom, .project-2, .kitchens, .project-5, .random, .kitchen-1, .kitchen-2, .kitchen-3, .kitchen-4, .chair, .park, .random {
-		display: none;
-		padding-top: 5%;
-	}
-	.portfolio, .cv {
-		background-color: transparent;
-	}
-	.portfolio > div {
-		margin: inherit;
-		margin-bottom: 2%
-	}
-	.kitchens > div, .dom > div, .park > div, .chair > div, .random > div {
-		margin: 0 13%;
-		margin-bottom: 2%
-	}
-	.cv > div {
-		margin: inherit;
-	}
-	.contact-details-container {
-		margin-top: 5%;
-		font-size: 1.1em;
-    	font-family: Montserrat;
-	}
-	.contact-phone, .contact-email {
-		margin-left: -17%;
-	}
-	.dom-title, .chair-title, .park-title {
-		width: 23%;
-		float: right;
-		text-align: right;
-	}
-	#dom, #park, #chair, #random, #cv {
-		background-color: white;
-	}
-	.kitchens, .dom, .park, .chair, .random {
-		position: absolute;
-	    width: 85%;
-	    margin: 0 10%;
-	}
-	.kitchens-summary, .dom-summary, .park-summary, .chair-summary, .random-summary {
-		float: left;
-		width: 25%;
-	}
-	.kitchens-container, .dom-container, .park-container, .chair-container, .random-container {
-		float: right;
-		width: 75%;
-	}
-	.project-2 {
-		position: absolute;
-	    width: 85%;
-	    margin: 0 10%;
-	}
-	
-	.portfolio, .cv, .contact, .random {
+	max-width: 100%;
+	font-family: Segoe UI;
+	overflow-x: hidden;
+}
+button {
+	outline: 0;
+}
+sup {
+		vertical-align: super;
+		font-size: smaller;
+		font-family: 'Raleway', sans-serif;
+		font-size: 14px;
+		font-weight: 700;
+}
+.site-container {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+.hi-page {
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	overflow-y: auto;
+	overflow-x: auto;
+	background: url(http://agatapatel.com/images/background2.png);
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-position: center;
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+.navbar {
+	position:absolute; 
+	bottom:0;
+	background-color: black;
+	width: 100%;
+	margin: 0;
+}
+.navbar .nav, .navbar .nav > li {
+	float:none;
+	display:inline-block;
+	vertical-align: top;
+	height: 10%;
+}
+.navbar-collapse {
+	text-align: center;
+}
+#main {
+	display: inline;
+}
+.home {
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	padding-top: 5%;
+	position: relative;
+	display: table;
+}
+#display-photo {
+	height: 300px;
+	width: 300px;
+	margin-top: 3%;
+}
+.top-buffer {
+	margin-top: 4%;
+}
+.portfolio, .contact, .cv, .dom, .project-2, .kitchens, .project-5, .random, .kitchen-1, .kitchen-2, .kitchen-3, .kitchen-4, .chair, .park, .random {
+	display: none;
+	padding-top: 5%;
+}
+.portfolio, .cv {
+	background-color: transparent;
+}
+.portfolio > div {
+	margin: inherit;
+	margin-bottom: 2%
+}
+.kitchens > div, .dom > div, .park > div, .chair > div, .random > div {
+	margin: 0 13%;
+	margin-bottom: 2%
+}
+.cv > div {
+	margin: inherit;
+}
+.contact-details-container {
+	margin-top: 5%;
+	font-size: 1.1em;
+}
+.contact-phone, .contact-email {
+	margin-left: -17%;
+}
+.dom-title, .chair-title, .park-title {
+	width: 23%;
+	float: right;
+	text-align: right;
+}
+#dom, #park, #chair, #random, #cv {
+	background-color: white;
+}
+.kitchens, .dom, .park, .chair, .random {
+	position: absolute;
+		width: 85%;
 		margin: 0 10%;
-	}
-	.portfolio-container, .cv-container {
-		margin: inherit;
-		padding-bottom: 10%;
-	}
-	.contact-container{
-		width: 70%;
-		margin: 0 auto;
-	}
-	.contact-details {
-		width: 45%;
-		float: left;
-		margin-right: 4%;
-		margin-top: 7%;
-	}
-	.contact-form {
-		width: 50%;
-		float: left;
-	}
-	#contact-form {
-		font-family: Segoe UI;
+}
+.kitchens-summary, .dom-summary, .park-summary, .chair-summary, .random-summary {
+	float: left;
+	width: 25%;
+}
+.kitchens-container, .dom-container, .park-container, .chair-container, .random-container {
+	float: right;
+	width: 75%;
+}
+.project-2 {
+	position: absolute;
+		width: 85%;
+		margin: 0 10%;
+}
+.portfolio, .cv, .contact, .random {
+	margin: 0 10%;
+}
+.portfolio-container, .cv-container {
+	margin: inherit;
+	padding-bottom: 10%;
+}
+.contact-container{
+	width: 70%;
+	margin: 0 auto;
+}
+.contact-details {
+	width: 45%;
+	float: left;
+	margin-right: 4%;
+	margin-top: 7%;
+}
+.contact-form {
+	width: 50%;
+	float: left;
+}
+#contact-form {
+	font-family: Segoe UI;
+	width: 100%;
+	margin-top: 20%;
+}
+.thumb-text {
+	position: absolute;
+	opacity: 1;
+	display: none;
+	position: absolute;
+	top: 5%;
+	background: #3e3e3e;
+	color: lightgray;
+	margin-right: 15%;
+	padding-left: 5%;
+	padding-right: 2%;
+	padding-top: 2%;
+	padding-bottom: 2%;
+	font-family: 'Raleway', sans-serif;
+}
+.home-main {
+	width: 100%;
+}
+.about {
+	display: none;
+}
+.about-text {
+	font-family: 'Raleway', sans-serif;;
+	background-color: rgba(255, 255, 255, 0.6);
+		padding: 5%;
+		border-radius: 10%;
+}
+.back-btn-container {
+	width: 20%;
+	float: left;
+}
+.back-btn {
+	cursor: pointer;
+}
+.portfolio-title {
+	width: 9%;
+	float: right;
+}
+.portfolio-title span  {
+	font-size: 14px;
+	font-weight: 700;
+}
+.kuchnie-title {
+	width: 8%;
+	float: right;
+}
+.kuchnie-title span, .dom-title span, .park-title span, .chair-title span, .random-title span {
+	font-size: 14px;
+	font-weight: 700;
+}
+#kitchen-1, #kitchen-2, #kitchen-3, #kitchen-4 {
+	background-color: white;
+}
+#dom img, #park img, #kitchen-1 img, #kitchen-2 img, #kitchen-3 img, #kitchen-4 img, #chair img, #random img {
+	width: 100%;
+	margin-bottom: 5%;
+		margin-top: 5%;
+}
+.resized-img {
+	width: 50% !important;
+	margin: 0 27% !important;
+}
+#kitchen-1-title, #kitchen-2-title, #kitchen-3-title, #kitchen-4-title, #random-title, #park-title {
+	width: 21%;
+}
+.cv-title {
+	width: 15%;
+	float: right;
+}
+.download-btn {
+	border: 0px;
+	margin-right: 15%;
+	background-color: #FE5F55;
+}
+.cv-container {
+	margin-top: 4% !important;
+}
+.close-about {
+	float: right;
+}
+.navbar-default .navbar-nav > li > a {
+	color: #003459;
+	font-size: 17px;
+	font-weight: 600;
+	font-family: 'Raleway', sans-serif;
+}
+
+@media only screen and (max-width: 767px) {
+	/* phones */
+	.kitchens-summary {
 		width: 100%;
-		margin-top: 20%;
+		padding-bottom: 2%;
+	}
+	.kitchens-container {
+		width: 100%;
+	}
+	.top-buffer-mobile {
+		margin-top: 5%;
 	}
 	.thumb-text {
-		position: absolute;
-		opacity: 1;
-		display: none;
-		position: absolute;
-	  	top: 5%;
-	  	background: #3e3e3e;
-	  	color: lightgray;
-	  	margin-right: 15%;
-	  	padding-left: 5%;
-	  	padding-right: 2%;
-	  	padding-top: 2%;
-	  	padding-bottom: 2%;
-	  	font-family: 'Raleway', sans-serif;
+		display: inline;
 	}
-	.home-main {
-		width: 100%;
-	}
-	.about {
-		display: none;
-	}
-	.about-text {
-		font-family: Raleway;
-		background-color: rgba(255, 255, 255, 0.6);
-    	padding: 5%;
-    	border-radius: 10%;
-	}
-	.back-btn-container {
-		width: 20%;
-		float: left;
-	}
-	.portfolio-title {
-		width: 9%;
-		float: right;
-	}
-	.portfolio-title span  {
-		font-size: 14px;
-		font-weight: 700;
-	}
-	.kuchnie-title {
-		width: 8%;
-		float: right;
-	}
-	.kuchnie-title span, .dom-title span, .park-title span, .chair-title span, .random-title span {
-		font-size: 14px;
-		font-weight: 700;
-	}
-	#kitchen-1, #kitchen-2, #kitchen-3, #kitchen-4 {
-		background-color: white;
-	}
-	#dom img, #park img, #kitchen-1 img, #kitchen-2 img, #kitchen-3 img, #kitchen-4 img, #chair img, #random img {
-		width: 100%;
-		margin-bottom: 5%;
-  		margin-top: 5%;
-	}
-	.resized-img {
-		width: 50% !important;
-		margin: 0 27% !important;
-	}
-	#kitchen-1-title, #kitchen-2-title, #kitchen-3-title, #kitchen-4-title, #random-title, #park-title {
-		width: 21%;
-	}
-	.cv-title {
-		width: 15%;
-		float: right;
-	}
-	.download-btn {
-		border: 0px;
-		margin-right: 15%;
-		background-color: #FE5F55;
-	}
-	.cv-container {
-		margin-top: 4% !important;
-	}
-	.close-about {
-		float: right;
-	}
-	.navbar-default .navbar-nav > li > a {
-    	color: #003459;
-    	font-size: 17px;
-  		font-weight: 600;
-  		font-family: 'Raleway', sans-serif;
-	}
+}
 
-	@media only screen and (max-width: 767px) {
-    /* phones */
-    	.kitchens-summary {
-			width: 100%;
-			padding-bottom: 2%;
-		}
-		.kitchens-container {
-			width: 100%;
-		}
-		.top-buffer-mobile {
-			margin-top: 5%;
-		}
-		.thumb-text {
-			display: inline;
-		}
-	}
+.hi {
+	font-family: Century Gothic;
+}
+.hi h2 {
+	font-size: 40px;
+}
 
-	.hi {
-		font-family: Century Gothic;
-	}
-	.hi h2 {
-		font-size: 40px;
-	}
+.hi span#about-lnk {
+	color: #003459;
+	cursor: pointer;
+}
 
-	.hi span#about-lnk {
-		color: #003459;
-		cursor: pointer;
-	}
-
-	.hi span#about-lnk:hover {
-		color: #FF9F1C;
-	}
+.hi span#about-lnk:hover {
+	color: #FF9F1C;
+}
 
 
 	/*** CSS CV ****/
 
-	.cv-header, .page-header { 
-      font-family: 'Raleway', sans-serif;
-    }
+.cv-header, .page-header { 
+	font-family: 'Raleway', sans-serif;
+}
 
-    .program-list { 
-      font-family: Segoe UI;
-    }
+.program-list { 
+	font-family: Segoe UI;
+}
 
-    .page-header { 
-      font-family: Segoe UI;
-      font-size: 1.3em;
-      font-weight:500;
-      margin-top: -1%;
-    }
+.page-header { 
+	font-family: Segoe UI;
+	font-size: 1.3em;
+	font-weight:500;
+	margin-top: -1%;
+}
 
-    .page-header-2 {
-      margin-top: -4%;
-    }
-        .shift-right {
-          text-align: right;
-          padding-top: 2%;
-          padding-right: 15%;
-          
-        }
-        ul {
-          list-style-type: none;
-        }
-        .r {
-          float:right;
-          font-family: Century Gothic;
-        }
-        #name {
-          font-size: 2.5em;
-        }
-        .cv-container {
-          padding: 0 5%;
-        }
-        .my_photo {
-          height: 150px;
-          width: 150px;
-          margin-top: 3%;
-        }
-        .portfolio-link {
-          margin-top: 5%;
-        }
-        .company-name {
-          font-size: 1.2em;
-        }
-        .company-position {
-          font-size: 1.1em;
-        }
-        .next-item {
-          margin-top: 3%;
-        }
-
-        .jumbotron {
-          padding-top: 0;
-          padding-bottom: 0;
-          background-color: white;
-        }
-        .container {
-          display: table;
-          vertical-align: middle;
-        }
-        .center-icon-container {
-          text-align: center;
-        }
-        .big-icon {
-          font-size: 2em;
-          text-align: center;
-        }
-        .program-list {
-          margin-top: 2%;
-          margin-left: 20%;
-        }
-        .other-stuff {
-          margin-left: 5%;
-          margin-bottom: 2%;
-          font-family: Century Gothic;
-        }
-        .date {
-          font-family: Century Gothic;
-          font-size: 1.1em;
-        }
-        .project-details {
-          margin-top: -1%;
-        }
-        .klauzula {
-          font-size: 0.7em;
-          font-family: Segoe UI !important;
-        }
+.page-header-2 {
+	margin-top: -4%;
+}
+.shift-right {
+	text-align: right;
+	padding-top: 2%;
+	padding-right: 15%;
+	
+}
+ul {
+	list-style-type: none;
+}
+.r {
+	float:right;
+	font-family: Century Gothic;
+}
+#name {
+	font-size: 2.5em;
+}
+.cv-container {
+	padding: 0 5%;
+}
+.my_photo {
+	height: 150px;
+	width: 150px;
+	margin-top: 3%;
+}
+.portfolio-link {
+	margin-top: 5%;
+}
+.company-name {
+	font-size: 1.2em;
+}
+.company-position {
+	font-size: 1.1em;
+}
+.next-item {
+	margin-top: 3%;
+}
+.jumbotron {
+	padding-top: 0;
+	padding-bottom: 0;
+	background-color: white;
+}
+.container {
+	display: table;
+	vertical-align: middle;
+}
+.center-icon-container {
+	text-align: center;
+}
+.big-icon {
+	font-size: 2em;
+	text-align: center;
+}
+.program-list {
+	margin-top: 2%;
+	margin-left: 20%;
+}
+.other-stuff {
+	margin-left: 5%;
+	margin-bottom: 2%;
+	font-family: Century Gothic;
+}
+.date {
+	font-family: Century Gothic;
+	font-size: 1.1em;
+}
+.project-details {
+	margin-top: -1%;
+}
+.klauzula {
+	font-size: 0.7em;
+	font-family: Segoe UI !important;
+}
