:iphone: :ok_hand:
Looks cool on phone now. :raised_hands:

--- a/src/sass/modules/_footer.scss
+++ b/src/sass/modules/_footer.scss
@@ -65,6 +65,13 @@ footer {
                 }
             }
         }
+        @include media('<tablet') {
+            li {
+                text-align: center;
+                display: block;
+                margin: 30px 0;
+            }
+        }
     }
 }
 .foot-logo {
