--- a/src/sass/pages/_contact.scss
+++ b/src/sass/pages/_contact.scss
@@ -4,6 +4,7 @@ html.contact, html.page__contact body {
 }
 .contact {
     padding-top: 12vh;
+    padding-bottom: 12vh;
 }
 .contact-headline {
     font-family: 'Montserrat', sans-serif;
