--- a/src/sass/modules/_img-overlay.scss
+++ b/src/sass/modules/_img-overlay.scss
@@ -9,6 +9,10 @@
         text-align:center;
         cursor:default;
 
+        @include media('<=tablet') {
+            margin-bottom: 15px;
+        }
+
         .#{$parent}__image-overlay {
             width:100%;
             height:100%;
