--- a/src/sass/modules/_nav.scss
+++ b/src/sass/modules/_nav.scss
@@ -30,44 +30,6 @@ nav {
         flex-flow: row wrap;
         align-items: flex-end;
     }
-    .nav-links {
-        @extend %no-list-style;
-        &-wrap {
-            float: right;
-        }
-        li {
-            margin-right: 5px;
-            margin-left: 5px;
-            
-            a {
-                color: rgba(255, 250, 242, 0.5);
-                border: 2px solid transparent;
-                padding: 10px 20px;
-                font-size: 1.56rem;
-                text-transform: uppercase;
-                font-family: 'Josefin Slab', serif;
-            }
-            a.selected {
-                border-color: rgba(218, 165, 32, 0.3);
-                color: white;
-            }
-            &:hover {
-                a {
-                    border-color: rgba(218, 165, 32, 0.5);
-                    color: white;
-                    text-decoration: none;
-                }
-                a.selected {
-                    border-color: rgba(218, 165, 32, 0.3);
-                }
-            }
-            &.lang-chooser {
-                display: none;
-                @import 'lang-chooser';
-            }
-        }
-        
-    }
     .nav__logo-wrap {
         font-size: 1.95rem;
         font-family: 'Josefin Slab', serif;
@@ -79,7 +41,10 @@ nav {
     }
     .nav-button {
         display: none;
-        float: right;
+        position: absolute;
+        top: 20px;
+        right: 10px;
+        text-align: right;
     }
     .nav__logo-svg {
         height: 65px;
@@ -102,7 +67,7 @@ nav {
         }
     }
     .nav__logo-name {
-        font-family: Montserrat;
+        font-family: 'Montserrat', sans-serif;
         text-align: right;
         line-height: 1.2;
     }
@@ -115,6 +80,44 @@ nav {
         }
     }
 }
+.nav-links {
+    float: right;
+    @extend %no-list-style;
+    &-wrap {
+        float: right;
+    }
+    li {
+        margin-right: 5px;
+        margin-left: 5px;
+        
+        a {
+            color: rgba(255, 250, 242, 0.5);
+            border: 2px solid transparent;
+            padding: 10px 20px;
+            font-size: 1.56rem;
+            text-transform: uppercase;
+            font-family: 'Josefin Slab', serif;
+        }
+        a.selected {
+            border-color: rgba(218, 165, 32, 0.3);
+            color: white;
+        }
+        &:hover {
+            a {
+                border-color: rgba(218, 165, 32, 0.5);
+                color: white;
+                text-decoration: none;
+            }
+            a.selected {
+                border-color: rgba(218, 165, 32, 0.3);
+            }
+        }
+        &.lang-chooser {
+            @import 'lang-chooser';
+        }
+    } 
+}
+
 .header-small {
     background-color: rgba(0, 0, 0, 0.5);
     padding-top: 3vh;
@@ -122,6 +125,20 @@ nav {
     .nav__logo-svg {
         height: 50px;
     }
+    /***/
+    @include media('<tablet') {
+        background-color: rgba(0, 0, 0, 0.9);
+        padding-bottom: 0;
+        .nav__logo-svg {
+            height: 25px;
+            transform: translateX(-20px) translateY(-20px);
+        }
+        .nav__logo-name {
+            opacity: 0;
+        }
+    }
+
+    /**/
 }
 .header-hide {
     -webkit-transition: -moz-transform .5s ease-out; 
@@ -145,12 +162,50 @@ nav {
 }
 
 .mobile-menu {
-    display: none;
-    height: 500px;
+    opacity: 0;
     width: 100%;
-    background-color: goldenrod;
+    background: linear-gradient(#590639, #121212);
     position: fixed;
     top: 0;
     left: 0;
     z-index: 2;
+    padding-top: 50px;
+    transition: transform 0.5s ease-in-out, opacity 0.3s ease-out;
+    transform: translateY(-100%);
+    .nav-links {
+        float: none;
+        padding-bottom: 10px;
+        li {
+            text-align: center;
+            display: block;
+            margin: 30px 0;
+        }
+    }
+    .nav__logo-svg-wrap {
+        text-align: center;
+    }
+    .nav__logo-svg {
+        height: 40px;
+        transition: transform 0.5s cubic-bezier(0.05, 0.73, 0, 0.87);
+        transition-delay: 0.4s;
+        transform: translateY(-100%);
+    }
+    &.isDisplayed {
+        opacity: 1;
+        transform: translateY(0);
+        .nav__logo-svg {
+            transform: translateY(0);
+        }
+    }
+    &__close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        &:hover {
+            .mobile-menu__close-svg {
+                fill: #fff;
+            }
+        }
+    }
 }
