--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -1,3 +1,5 @@
+@import "../base/include-media";
+
 html.page__home, html.page__home body {
     background-color: #121212;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='12' viewBox='0 0 20 12'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='charlie-brown' fill='%233c3a05' fill-opacity='0.4'%3E%3Cpath d='M9.8 12L0 2.2V.8l10 10 10-10v1.4L10.2 12h-.4zm-4 0L0 6.2V4.8L7.2 12H5.8zm8.4 0L20 6.2V4.8L12.8 12h1.4zM9.8 0l.2.2.2-.2h-.4zm-4 0L10 4.2 14.2 0h-1.4L10 2.8 7.2 0H5.8z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
@@ -15,6 +17,9 @@ html.page__home, html.page__home body {
     filter: contrast(1.2);
     width: 40vh;
     box-shadow: 0px 0px 15px #3a3405;
+    @include media('<=tablet') {
+        width: 60vw;
+    }
 }
 .photo-row {
     text-align: center;
@@ -28,4 +33,8 @@ html.page__home, html.page__home body {
     color: #e1e1e1;
     font-family: 'Montserrat', sans-serif;
     text-align: center;
+    word-break: break-word;
+    @include media('<=tablet') {
+        font-size: 1.95rem;
+    }
 }
