--- a/static/main.css
+++ b/static/main.css
@@ -5834,6 +5834,9 @@ html.page__home, html.page__home body {
   filter: contrast(1.2);
   width: 40vh;
   box-shadow: 0px 0px 15px #3a3405; }
+  @media (max-width: 768px) {
+    .my-photo {
+      width: 60vw; } }
 
 .photo-row {
   text-align: center; }
@@ -5846,12 +5849,16 @@ html.page__home, html.page__home body {
   margin-top: 5vh;
   color: #e1e1e1;
   font-family: 'Montserrat', sans-serif;
-  text-align: center; }
+  text-align: center;
+  word-break: break-word; }
+  @media (max-width: 768px) {
+    .about-text-row {
+      font-size: 1.95rem; } }
 
 .portfolio {
   z-index: 1;
   padding-top: 12vh; }
-  .portfolio img {
+  .portfolio-img {
     width: 100%; }
   .portfolio-row {
     width: 100%;
@@ -5863,9 +5870,15 @@ html.page__home, html.page__home body {
   .portfolio-col:first-child {
     padding-right: 5px;
     padding-left: 0; }
+    @media (max-width: 768px) {
+      .portfolio-col:first-child {
+        padding: 0; } }
   .portfolio-col:last-child {
     padding-left: 5px;
     padding-right: 0; }
+    @media (max-width: 768px) {
+      .portfolio-col:last-child {
+        padding: 0; } }
   .portfolio-title {
     font-size: 6vw;
     font-family: 'Josefin Slab', serif;
@@ -5879,15 +5892,8 @@ html.page__home, html.page__home body {
     padding: 0;
     position: relative;
     background-position: bottom;
-    height: 70vh;
     background-repeat: no-repeat;
     filter: contrast(1.2) saturate(1.35); }
-    .portfolio .portfolio-row-1 > div {
-      padding: 0;
-      margin: 0;
-      background: linear-gradient(90deg, rgba(210, 205, 167, 0.7), transparent);
-      position: relative;
-      bottom: 0; }
   .portfolio .title {
     padding: 20px 0 20px 100px;
     background-color: goldenrod; }
@@ -5905,36 +5911,32 @@ html.page__home, html.page__home body {
   background: black; }
 
 .portfolio-row-5 {
-  overflow-y: hidden;
-  width: 99vw;
-  /** <---- wut? **/
-  min-height: 200vh;
-  padding-bottom: 100px;
-  position: relative; }
+  width: 100%; }
+  .portfolio-row-5__wrap {
+    width: 85%;
+    margin: 0 auto; }
+  .portfolio-row-5__bg-wrap {
+    width: 60%;
+    padding-top: 100px; }
   .portfolio-row-5__first-image {
-    position: absolute;
-    top: 10%;
-    left: 10%;
     background-image: url(../static/img/5.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    width: 55vw;
-    height: 75vh;
-    box-shadow: 0 0 20px 0px #f6f6f9;
-    opacity: 0; }
-  .portfolio-row-5 img {
-    position: absolute;
-    width: 40%;
-    top: 30%;
-    right: 7%;
-    height: auto;
     box-shadow: 0 0 20px 0px #f6f6f9; }
+  .portfolio-row-5__second-image {
+    position: relative;
+    left: 45%;
+    width: 55%;
+    bottom: 200px;
+    box-shadow: 0 0 20px 0px #f6f6f9; }
+    @media (max-width: 768px) {
+      .portfolio-row-5__second-image {
+        bottom: 75px; } }
 
 .portfolio-row-9 {
   background: url(../static/img/8.jpg);
   background-size: cover;
   background-position: bottom;
-  height: 70vh;
   background-repeat: no-repeat;
   filter: contrast(1.2) saturate(1.35); }
 
@@ -5965,7 +5967,6 @@ html.page__home, html.page__home body {
 
 .hero-image {
   background-repeat: no-repeat;
-  min-height: 100vh;
   background-size: cover;
   overflow-x: hidden;
   margin: 0; }
@@ -5973,6 +5974,10 @@ html.page__home, html.page__home body {
     background-image: url(../static/img/4.jpg); }
   .hero-image-2 {
     background-image: url(../static/img/7.jpg); }
+
+.bg-placeholder {
+  visibility: hidden;
+  width: 100%; }
 
 .quote-row {
   padding: 0;
@@ -5992,6 +5997,9 @@ html.page__home, html.page__home body {
   position: relative;
   text-align: center;
   cursor: default; }
+  @media (max-width: 768px) {
+    .pf-col__hover-wrap {
+      margin-bottom: 15px; } }
   .pf-col__hover-wrap .pf-col__image-overlay {
     width: 100%;
     height: 100%;
@@ -6219,7 +6227,9 @@ html.cv, html.page__cv body {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23252302' fill-opacity='0.4'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); }
 
 .cv {
-  padding-top: 12vh; }
+  padding-top: 12vh;
+  padding-left: 5vw;
+  padding-right: 5vw; }
 
 #cv .jumbotron {
   padding-top: 0;
@@ -6329,7 +6339,8 @@ html.contact, html.page__contact body {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23252302' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); }
 
 .contact {
-  padding-top: 12vh; }
+  padding-top: 12vh;
+  padding-bottom: 12vh; }
 
 .contact-headline {
   font-family: 'Montserrat', sans-serif;
@@ -6343,6 +6354,11 @@ html.contact, html.page__contact body {
 .main-section {
   margin-top: 12vh; }
 
+.fadeInUp {
+  animation-name: fadeInUp;
+  animation-duration: 1s;
+  animation-fill-mode: both; }
+
 @keyframes fadeInUp {
   from {
     opacity: 0;
@@ -6350,8 +6366,8 @@ html.contact, html.page__contact body {
   to {
     opacity: 1;
     transform: none; } }
-.fadeInUp {
-  animation-name: fadeInUp;
+.fadeInLeft {
+  animation-name: fadeInLeft;
   animation-duration: 1s;
   animation-fill-mode: both; }
 
@@ -6362,8 +6378,8 @@ html.contact, html.page__contact body {
   to {
     opacity: 1;
     transform: none; } }
-.fadeInLeft {
-  animation-name: fadeInLeft;
+.fadeInRight {
+  animation-name: fadeInRight;
   animation-duration: 1s;
   animation-fill-mode: both; }
 
@@ -6374,11 +6390,6 @@ html.contact, html.page__contact body {
   to {
     opacity: 1;
     transform: none; } }
-.fadeInRight {
-  animation-name: fadeInRight;
-  animation-duration: 1s;
-  animation-fill-mode: both; }
-
 nav {
   padding-top: 5vh;
   padding-bottom: 5vh;
@@ -6405,44 +6416,6 @@ nav {
     display: flex;
     flex-flow: row wrap;
     align-items: flex-end; }
-  nav .nav-links-wrap {
-    float: right; }
-  nav .nav-links li {
-    margin-right: 5px;
-    margin-left: 5px; }
-    nav .nav-links li a {
-      color: rgba(255, 250, 242, 0.5);
-      border: 2px solid transparent;
-      padding: 10px 20px;
-      font-size: 1.56rem;
-      text-transform: uppercase;
-      font-family: 'Josefin Slab', serif; }
-    nav .nav-links li a.selected {
-      border-color: rgba(218, 165, 32, 0.3);
-      color: white; }
-    nav .nav-links li:hover a {
-      border-color: rgba(218, 165, 32, 0.5);
-      color: white;
-      text-decoration: none; }
-    nav .nav-links li:hover a.selected {
-      border-color: rgba(218, 165, 32, 0.3); }
-    nav .nav-links li.lang-chooser {
-      display: none; }
-      nav .nav-links li.lang-chooser a {
-        border: none; }
-        nav .nav-links li.lang-chooser a span {
-          padding: 5px;
-          border: 1px solid grey;
-          cursor: pointer; }
-          nav .nav-links li.lang-chooser a span:hover {
-            color: white; }
-        nav .nav-links li.lang-chooser a span:nth-child(1) {
-          border-right-width: 0px; }
-        nav .nav-links li.lang-chooser a span.lang-selected {
-          background-color: rgba(255, 255, 255, 0.5);
-          color: black; }
-      nav .nav-links li.lang-chooser:hover a {
-        color: rgba(255, 250, 242, 0.5); }
   nav .nav__logo-wrap {
     font-size: 1.95rem;
     font-family: 'Josefin Slab', serif;
@@ -6452,7 +6425,10 @@ nav {
       display: inline-block; }
   nav .nav-button {
     display: none;
-    float: right; }
+    position: absolute;
+    top: 20px;
+    right: 10px;
+    text-align: right; }
   nav .nav__logo-svg {
     height: 65px;
     -webkit-transition: -moz-transform .5s ease-out;
@@ -6470,7 +6446,7 @@ nav {
       color: white;
       text-decoration: none; }
   nav .nav__logo-name {
-    font-family: Montserrat;
+    font-family: 'Montserrat', sans-serif;
     text-align: right;
     line-height: 1.2; }
   @media (max-width: 768px) {
@@ -6479,12 +6455,63 @@ nav {
     nav .nav-links-wrap {
       display: none; } }
 
+.nav-links {
+  float: right; }
+  .nav-links-wrap {
+    float: right; }
+  .nav-links li {
+    margin-right: 5px;
+    margin-left: 5px; }
+    .nav-links li a {
+      color: rgba(255, 250, 242, 0.5);
+      border: 2px solid transparent;
+      padding: 10px 20px;
+      font-size: 1.56rem;
+      text-transform: uppercase;
+      font-family: 'Josefin Slab', serif; }
+    .nav-links li a.selected {
+      border-color: rgba(218, 165, 32, 0.3);
+      color: white; }
+    .nav-links li:hover a {
+      border-color: rgba(218, 165, 32, 0.5);
+      color: white;
+      text-decoration: none; }
+    .nav-links li:hover a.selected {
+      border-color: rgba(218, 165, 32, 0.3); }
+    .nav-links li.lang-chooser a {
+      border: none;
+      display: none; }
+      .nav-links li.lang-chooser a span {
+        padding: 5px;
+        border: 1px solid grey;
+        cursor: pointer; }
+        .nav-links li.lang-chooser a span:hover {
+          color: white; }
+      .nav-links li.lang-chooser a span:nth-child(1) {
+        border-right-width: 0px; }
+      .nav-links li.lang-chooser a span.lang-selected {
+        background-color: rgba(255, 255, 255, 0.5);
+        color: black; }
+    .nav-links li.lang-chooser:hover a {
+      color: rgba(255, 250, 242, 0.5); }
+
 .header-small {
   background-color: rgba(0, 0, 0, 0.5);
   padding-top: 3vh;
-  padding-bottom: 1vh; }
+  padding-bottom: 1vh;
+  /***/
+  /**/ }
   .header-small .nav__logo-svg {
     height: 50px; }
+  @media (max-width: 767px) {
+    .header-small {
+      background-color: rgba(0, 0, 0, 0.9);
+      padding-bottom: 0; }
+      .header-small .nav__logo-svg {
+        height: 25px;
+        transform: translateX(-20px) translateY(-20px); }
+      .header-small .nav__logo-name {
+        opacity: 0; } }
 
 .header-hide {
   -webkit-transition: -moz-transform .5s ease-out;
@@ -6507,14 +6534,42 @@ nav {
   transform: translateY(0%); }
 
 .mobile-menu {
-  display: none;
-  height: 500px;
+  opacity: 0;
   width: 100%;
-  background-color: goldenrod;
+  background: linear-gradient(#590639, #121212);
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 2; }
+  z-index: 2;
+  padding-top: 50px;
+  transition: transform 0.5s ease-in-out, opacity 0.3s ease-out;
+  transform: translateY(-100%); }
+  .mobile-menu .nav-links {
+    float: none;
+    padding-bottom: 10px; }
+    .mobile-menu .nav-links li {
+      text-align: center;
+      display: block;
+      margin: 30px 0; }
+  .mobile-menu .nav__logo-svg-wrap {
+    text-align: center; }
+  .mobile-menu .nav__logo-svg {
+    height: 40px;
+    transition: transform 0.5s cubic-bezier(0.05, 0.73, 0, 0.87);
+    transition-delay: 0.4s;
+    transform: translateY(-100%); }
+  .mobile-menu.isDisplayed {
+    opacity: 1;
+    transform: translateY(0); }
+    .mobile-menu.isDisplayed .nav__logo-svg {
+      transform: translateY(0); }
+  .mobile-menu__close {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer; }
+    .mobile-menu__close:hover .mobile-menu__close-svg {
+      fill: #fff; }
 
 .foot-social svg path {
   fill: white; }
@@ -6523,10 +6578,10 @@ nav {
 .foot-social svg:hover path {
   fill: goldenrod; }
 
-nav .nav-links li, footer .foot-social li, footer .foot-links li, footer .foot-social li a span {
+.nav-links li, footer .foot-social li, footer .foot-links li, footer .foot-social li a span {
   display: inline-block; }
 
-nav .nav-links, footer .foot-social, footer .foot-links {
+.nav-links, footer .foot-social, footer .foot-links {
   list-style: none outside none;
   padding: 0; }
 
@@ -6564,6 +6619,11 @@ footer {
         border-color: rgba(218, 165, 32, 0.5);
         color: white;
         text-decoration: none; }
+    @media (max-width: 767px) {
+      footer .foot-links li {
+        text-align: center;
+        display: block;
+        margin: 30px 0; } }
 
 .foot-logo {
   border: 5px solid white;
@@ -6597,6 +6657,11 @@ footer {
       width: 100%;
       margin-bottom: 5%;
       margin-top: 5%; }
+    @media (max-width: 768px) {
+      .project-row {
+        padding: 60px 10px; }
+        .project-row-title {
+          padding: 0; } }
   .project-col:first-child {
     padding-right: 5px;
     padding-left: 0; }
@@ -6615,6 +6680,9 @@ footer {
     font-size: 1.56rem;
     font-family: 'Montserrat', sans-serif;
     line-height: 1.5; }
+    @media (max-width: 768px) {
+      .project .project-images-wrap {
+        padding: 50px 5vh; } }
   .project .project-images-wrap:after {
     content: '';
     position: fixed;
