--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -81,7 +81,7 @@
         <div class="row">
             <div class="col-md-12">
                 <ul class="foot-links">
-                    <li><a href="/portfolio">portfolio</a></li>
+                    <li><a href="/realizacje">realizacje</a></li>
                     <li><a href="/projects">projekty</a></li>
                     <li><a href="/cv">cv</a></li>
                     <li><a href="/contact">kontakt</a></li>
