--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -25,7 +25,7 @@
         </div>
         <div id="nav-links-wrap" class="col-md-9 col-sm-9 nav-links-wrap">
             <ul class="nav-links">
-                <li><a id="portfolio-link" href="/portfolio">portfolio</a></li>
+                <li><a id="portfolio-link" href="/realizacje">realizacje</a></li>
                 <li><a id="projects-link" href="/projects">projekty</a></li>
                 <li><a id="cv-link" href="/cv">cv</a></li>
                 <li><a id="contact-link" href="/contact">kontakt</a></li>
@@ -66,7 +66,7 @@
         </svg>
     </div>
     <ul class="nav-links">
-        <li><a id="portfolio-link" href="/portfolio">portfolio</a></li>
+        <li><a id="portfolio-link" href="/realizacje">realizacje</a></li>
         <li><a id="projects-link" href="/projects">projekty</a></li>
         <li><a id="cv-link" href="/cv">cv</a></li>
         <li><a id="contact-link" href="/contact">kontakt</a></li>
